# web-map-app

./: README.md
.devcontainer/: docker-compose.yml
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
.github/workflows/: deploy.yml
backend/: .env.example  README.md  pyproject.toml
backend/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/src/backend/: __main__.py  cli.py  main.py
backend/src/backend/db/: sql.py
frontend/maplibre-geocoder/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/maplibre-geocoder/src/: main.js  style.css
frontend/maplibre-geocoder/src/assets/: mpl-style.json
frontend/maplibre-geocoder/src/modules/: utils.js
frontend/maplibre-geocoder/src/modules/utils/: data.js  geocoding.js
frontend/multipage/: index.html  package-lock.json  package.json  vite.config.js
frontend/multipage/.devcontainer/: devcontainer.json
frontend/multipage/page-leaflet/: main.js
frontend/multipage/page-maplibre/: main.js
frontend/multipage/page-maptalks/: index.html  main.js
frontend/multipage/public/: markers.geojson
frontend/multipage/src/: style.css
frontend/multipage/src/modules/: data.js  maps.js  markers.js
frontend/multipage/src/modules/maps/: leaflet.js  maplibre.css  maplibre.js  maptalks.js
frontend/multipage/tests/: sum.test.js
frontend/vanilla-spa/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/vanilla-spa/.devcontainer/: devcontainer.json
frontend/vanilla-spa/src/: main.js  main_cesium.js  main_leaflet.js  main_openlayers.js  style.css  style_openlayers.css
frontend/vanilla-spa/src/components/: cesium.js  leaflet.js  openlayers.js
frontend/vanilla-spa/src/views/: docs_list.js  home.js
